fix bugs with invisible logo on side header, and logo sticking through full screen search overlay

--- a/sass/components/_glazed-header--side.scss
+++ b/sass/components/_glazed-header--side.scss
@@ -195,6 +195,9 @@
       overflow: auto;
     }
   }
+  &.body--glazed-header-side.body--full-screen-search .glazed-header--side .navbar-header {
+    z-index: 4060;
+  }
 }
 
 // Mobile Only styles
